<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/appTheme"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"

            >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sofiapro_light"
            android:padding="8dp"
            android:text="Configuring Wizzo Device with your Home Router"
            android:textColor="@color/appGreen"
            android:textStyle="bold"
            android:textSize="18sp"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiapro_light"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/subtitle_wizzo_search"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_caution"
            android:tint="@color/appGreen"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Caution"
            android:textColor="@color/appGreen"
            android:fontFamily="@font/sofiapro_light"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiapro_light"
        android:text="@string/msg_caution_config"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
                    android:src="@mipmap/ic_tools"
            android:tint="@color/appGreen"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Troubleshooting Tips"
            android:textColor="@color/appGreen"
            android:fontFamily="@font/sofiapro_light"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiapro_light"
        android:text="@string/troubleshoot_config"
        android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
